--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0",
-    "styled-components": "^5.3.6"
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
