--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.15.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0",
-    "react-toastify": "^9.1.1",
-    "styled-components": "^5.3.6",
-    "sweetalert": "^2.1.2"
-  },
+    "styled-components": "^5.3.6"
+   },
+
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
