--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.5.0",
-    "styled-components": "^5.3.6"
-   },
-
+    "react-router-dom": "^6.15.0",
+    "styled-components": "^5.3.6",
+    "swiper": "^10.0.4"
+  },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
